<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.juan.hw1.MainActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="495dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewUTCLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/tv_utc_lable" />

            <EditText
                android:id="@+id/etHour"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_hour"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/textViewColon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_colon" />

            <EditText
                android:id="@+id/etMinutes"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_minutes"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <ToggleButton
                android:id="@+id/toggleButtonRB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOn="On"
                android:textOff="Off"
                android:text="ToggleButton" />

            <Switch
                android:id="@+id/switchToggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Switch"
                android:textOff="off"
                android:textOn="On" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTimeLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".2"
                android:text="@string/text_view_time" />

            <TextView
                android:id="@+id/editTextTime"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="time" />

            <TextView
                android:id="@+id/editTextPrevDay"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/radioButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <RadioGroup
                android:id="@+id/radioButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbEST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_est" />

                <RadioButton
                    android:id="@+id/rbCST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_cst" />

                <RadioButton
                    android:id="@+id/rbMST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_mst" />

                <RadioButton
                    android:id="@+id/rbPST"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_pst" />

                <RadioButton
                    android:id="@+id/rbClearAll"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rb_clear" />
            </RadioGroup>

            <Button
                android:id="@+id/btnConvert"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_convert" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">

            <Button
                android:id="@+id/buttonEST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_est" />

            <Button
                android:id="@+id/buttonCST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_cst" />

            <Button
                android:id="@+id/buttonMST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_mst" />

            <Button
                android:id="@+id/buttonPST"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_pst" />

            <Button
                android:id="@+id/buttonClear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_clear" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
